--- a/style.css
+++ b/style.css
@@ -9,14 +9,42 @@
 }
 
 :root {
-  --white: #eee8d5;
-  --light: #f1cd57;
-  --dark: #e0bf51;
-  --hover: #d1b24c;
+  /* --white: #fff;
+  --black: #181818;
+  --main: #222222;
+  --main-hover: #222222cc;
+  --btn: #1a1a1a;
+  --btn-hover: #1a1a1a80;
+  --light-bg: #2e2e2e; */
+
+    --white: #fff;
+    --black: #292722;
+    --main: #ffd257;
+    --main-hover: #ffd257cc;
+    --btn: #e9c258;
+    --btn-hover: #e9c25880;
+    --light-bg: #fffbf1;
+    
+    /* --white: #fff;
+    --black: #27312b;
+    --main: #6ace97;
+    --main-hover: #6ace97cc;
+    --btn: #59b884;
+    --btn-hover: #59b88480;
+    --light-bg: #e7fdf1; */
+
+    /* --white: #fff;
+    --black: #231f25;
+    --main: #ac40f4;
+    --main-hover: #ac40f4cc;
+    --btn: #8515cf;
+    --btn-hover: #8515cf80;
+    --light-bg: #fcf8ff; */
 }
 
 body {
-  background-color: var(--white);
+  position: relative;
+  background-color: var(--light-bg);
 }
 
 header {
@@ -25,7 +53,8 @@ header {
   height: 72px;
   width: 100%;
 
-  background-color: var(--light);
+  background-color: var(--main);
+  z-index: 2;
 }
 
 header .header-box {
@@ -38,14 +67,6 @@ header .header-box {
   display: flex;
   align-items: center;
   justify-content: space-between;
-}
-
-.header-box .logo {
-  padding: 0 24px;
-
-  border-radius: 12px;
-  /* background-color: var(--dark); */
-  cursor: pointer;
 }
 
 .header-box .logo a {
@@ -85,7 +106,7 @@ header .header-box {
   text-align: center;
   color: var(--white);
   font-size: 24px;
-  background-color: var(--dark);
+  background-color: var(--btn);
   cursor: pointer;
 }
 
@@ -101,7 +122,7 @@ header .header-box {
   top: 48px;
   left: -60px;
   border-radius: 12px;
-  background-color: var(--light);
+  background-color: var(--main);
   box-shadow: 0 2px 6px 3px rgba(0, 0, 0, 0.2);
   pointer-events: none;
 }
@@ -133,18 +154,17 @@ header .header-box {
   border: none;
   outline: none;
   border-radius: 50%;
-  box-shadow: inset 0 0 0 4px rgb(240, 240, 240, 0.5);
   cursor: pointer;
 }
 
 .color-switcher-dropdown button.blue {
-  background-color: #f1cd57;
+  background-color: #ffd257;
 }
 .color-switcher-dropdown button.purple {
-  background-color: purple;
+  background-color: #ac40f4;
 }
 .color-switcher-dropdown button.green {
-  background-color: green;
+  background-color: #6ace97;
 }
 .color-switcher-dropdown button.active {
   box-shadow: inset 0 0 0 3px rgb(240, 240, 240, 1);
@@ -160,15 +180,14 @@ header .header-box {
   line-height: 48px;
   text-align: center;
   border-radius: 12px;
-  background-color: var(--dark);
+  background-color: var(--btn);
   cursor: pointer;
 }
 
-/* header .logo:hover, */
 .header-box-right .login-signup:hover,
 .appearance .theme-switcher-icon:hover,
 .appearance .color-switcher-icon:hover {
-  background-color: var(--hover);
+  background-color: var(--btn-hover);
 }
 
 .header-box-right .login-signup a {
