--- a/header.css
+++ b/header.css
@@ -9,37 +9,13 @@
 }
 
 :root {
-  /* --white: #fff;
-  --black: #181818;
-  --main: #222222;
-  --main-hover: #222222cc;
-  --btn: #1a1a1a;
-  --btn-hover: #1a1a1a80;
-  --light-bg: #2e2e2e; */
-
-    --white: #fff;
-    --black: #292722;
-    --main: #ffd257;
-    --main-hover: #ffd257cc;
-    --btn: #e9c258;
-    --btn-hover: #e9c25880;
-    --light-bg: #fffbf1;
-    
-    /* --white: #fff;
-    --black: #27312b;
-    --main: #6ace97;
-    --main-hover: #6ace97cc;
-    --btn: #59b884;
-    --btn-hover: #59b88480;
-    --light-bg: #e7fdf1; */
-
-    /* --white: #fff;
-    --black: #231f25;
-    --main: #ac40f4;
-    --main-hover: #ac40f4cc;
-    --btn: #8515cf;
-    --btn-hover: #8515cf80;
-    --light-bg: #fcf8ff; */
+  --white: #fff;
+  --black: #292722;
+  --main: #ffd257;
+  --main-hover: #ffd257cc;
+  --btn: #e9c258;
+  --btn-hover: #e9c25880;
+  --light-bg: #fffbf1;
 }
 
 body {
@@ -55,6 +31,7 @@ header {
 
   background-color: var(--main);
   z-index: 2;
+  box-shadow: 0 2px 12px 3px rgba(0, 0, 0, 0.1);
 }
 
 header .header-box {
@@ -110,7 +87,7 @@ header .header-box {
   cursor: pointer;
 }
 
-.appearance .theme-switcher-icon.dark{
+.appearance .theme-switcher-icon.dark {
   color: rgb(255, 230, 0);
 }
 
