--- a/style/note.css
+++ b/style/note.css
@@ -3,48 +3,41 @@
   position: relative;
   display: flex;
   flex-wrap: wrap;
-  justify-content: flex-start;
+  justify-content: center;
   align-items: flex-start;
   gap: 24px;
+  visibility: hidden;
+  z-index: 3;
 }
 
-.notes-box::before {
-  content: "";
-  margin: 36px 0;
-  display: block;
-  width: auto;
-  height: 2px;
-  background: var(--main);
-  align-items: center;
-}
 /* ---------------------------- Note main ---------------------------- */
 .note {
-  position: relative;
-  z-index: 1;
-
   min-width: 120px;
   max-width: 600px;
   width: auto;
   min-height: 120px;
-
   padding: 12px;
+
+  position: relative;
   border-radius: 12px;
   border: 4px solid var(--main);
   box-shadow: 0 2px 12px 3px rgba(0, 0, 0, 0.1);
   color: var(--black);
-  font-size: 30px;
+  font-size: 1.5rem;
   overflow: hidden;
+  z-index: 1;
+  background-color: var(--light-bg);
 }
 
 .note h3 {
   color: var(--black);
   margin-right: 48px;
-  font-size: 24px;
+  font-size: 1rem;
 }
 
 .note p {
   color: var(--black);
-  font-size: 18px;
+  font-size: 0.75rem;
 }
 
 .note p::before {
@@ -58,36 +51,24 @@
 }
 
 .note i {
+  position: absolute;
   color: var(--black);
   right: 12px;
-  position: absolute;
   cursor: pointer;
 }
 /* ---------------------------- Notes input box ---------------------------- */
 .note.note-input {
-  min-width: 360px;
-  width: 600px;
-}
-
-.note .btn.btn-create{
-  float: right;
-  width: 120px;
-  height: 36px;
-  line-height: 100%;
-}
-
-.note .btn.btn-create a {
-  font-size: 18px;
+  min-width: 420px;
 }
 
 .note input {
   height: 36px;
   width: 80%;
-
   padding-left: 12px;
+
   display: block;
   margin: 12px 0;
-  font-size: 18px;
+  font-size: 0.75rem;
   outline: none;
   border-radius: 12px;
   border: 2px solid var(--light-bg);
@@ -99,25 +80,30 @@
   resize: none;
   overflow: hidden;
 
-  height: 180px;
+  height: 120px;
 
   outline: none;
   padding-left: 12px;
-  font-size: 18px;
+  font-size: 0.75rem;
   border-radius: 12px;
   border: 2px solid var(--light-bg);
 
   word-wrap: break-word;
 }
+
+.note button{
+  margin: 0;
+  float: right;
+}
 /* ---------------------------- Dark theme props ---------------------------- */
 .main-wrapper.dark .note h3 {
   color: var(--white);
-  font-size: 24px;
+  font-size: 1rem;
 }
 
 .main-wrapper.dark .note p {
   color: var(--white);
-  font-size: 18px;
+  font-size: 0.75rem;
 }
 
 .main-wrapper.dark .note i {
