add resize and validation for note input
resize for textarea, validation for title and text input

--- a/style/hovers.css
+++ b/style/hovers.css
@@ -15,6 +15,7 @@ button:hover{
 
 .note i:hover {
   color: rgb(231, 71, 71);
+  color: rgb(235, 121, 121);
   transform: rotate(-90deg) scale(1.25);
 }
 
