--- a/src/style/hovers.css
+++ b/src/style/hovers.css
@@ -20,9 +20,15 @@ button:hover{
 }
 
 .main-wrapper .notes-wrapper .note:hover {
-  transform: rotate(0.25deg) scale(1.25) translateY(2px);
   background-color: var(--btn-hover);
   z-index: 99;
+}
+
+.main-wrapper .notes-wrapper .note.note:nth-of-type(odd):hover {
+  transform: rotate(.5deg) scale(1.25) translateY(2px);
+}
+.main-wrapper .notes-wrapper .note:nth-of-type(even):hover {
+  transform: rotate(-.5deg) scale(1.25) translateY(2px);
 }
 
 .main-wrapper.dark .notes-wrapper .note:hover {
