--- a/src/style/header.css
+++ b/src/style/header.css
@@ -1,15 +1,14 @@
 header {
-  height: 72px;
+  height: 100px;
   width: 100%;
 
   position: fixed;
   background-color: var(--main);
-  box-shadow: 0 2px 12px 3px rgba(0, 0, 0, 0.1);
   z-index: 2;
 }
 
 header.hide {
-  top: -72px;
+  top: -100px;
 }
 
 header .header-box {
@@ -32,7 +31,6 @@ header .header-box {
 
 .header-box-right {
   height: 48px;
-
   display: flex;
   align-items: center;
 }
@@ -57,9 +55,9 @@ header .header-box {
   line-height: 48px;
   border-radius: 12px;
   text-align: center;
-  color: var(--white);
+  color: var(--black);
   font-size: 1rem;
-  background-color: var(--btn);
+  background-color: var(--main);
   cursor: pointer;
 }
 
@@ -76,7 +74,7 @@ header .header-box {
   left: -60px;
   border-radius: 12px;
   background-color: var(--main);
-  box-shadow: 0 2px 6px 3px rgba(0, 0, 0, 0.2);
+  box-shadow: 0 2px 12px 3px rgba(0, 0, 0, 0.1);
   pointer-events: none;
 }
 
@@ -88,7 +86,7 @@ header .header-box {
 }
 
 .color-switcher-dropdown h3 {
-  color: var(--white);
+  color: var(--black);
   font-size: 0.75rem;
   font-weight: 400;
 }
@@ -111,22 +109,22 @@ header .header-box {
 }
 
 .color-switcher-dropdown button.blue {
-  background-color: #ffd257;
+  background-color: rgb(61, 133, 201);
 }
 .color-switcher-dropdown button.purple {
-  background-color: #ac40f4;
+  background-color: rgb(201, 61, 119);
 }
 .color-switcher-dropdown button.green {
-  background-color: #6ace97;
+  background-color: rgb(32, 158, 70);
 }
 .color-switcher-dropdown button.active {
-  box-shadow: inset 0 0 0 3px rgb(240, 240, 240, 1);
+  box-shadow: inset 0 0 0 3px var(--color),
+    inset 0 0 0 6px var(--white);
 }
 
 header button {
-  font-size: 1rem;
-  padding: 6.5px 24px;
-  background: var(--btn);
+  font-size: .75rem;
+  padding: 4.5px 24px;
 }
 
 
