--- a/src/style/note.css
+++ b/src/style/note.css
@@ -20,13 +20,13 @@
 
   position: relative;
   border-radius: 12px;
-  border: 4px solid var(--main);
+  /* border: 4px solid var(--main); */
   box-shadow: 0 2px 12px 3px rgba(0, 0, 0, 0.1);
-  color: var(--black);
+  /* color: var(--black); */
   font-size: 1.5rem;
   overflow: hidden;
   z-index: 1;
-  background-color: var(--light-bg);
+  background-color: var(--main);
 }
 
 .note h3 {
@@ -47,7 +47,7 @@
   display: block;
   width: auto;
   height: 2px;
-  background: var(--main);
+  background: var(--grey);
   align-items: center;
 }
 
@@ -72,7 +72,8 @@
   font-size: 0.75rem;
   outline: none;
   border-radius: 12px;
-  border: 2px solid var(--light-bg);
+  border: none;
+  color: var(--black);
   background-color: var(--white);
 }
 
@@ -87,7 +88,9 @@
   padding: 12px;
   font-size: 0.75rem;
   border-radius: 12px;
-  border: 2px solid var(--light-bg);
+  border: none;
+  color: var(--black);
+  background-color: var(--white);
 
   word-wrap: break-word;
 }
@@ -99,37 +102,11 @@
   float: right;
   font-size: 0.75rem;
   line-height: 36px;
-  color: var(--btn);
+  color: var(--color);
   visibility: hidden;
 }
 
 .note button{
   margin: 0;
   float: right;
-}
-/* ---------------------------- Dark theme props ---------------------------- */
-.main-wrapper.dark .note h3 {
-  color: var(--white);
-  font-size: 1rem;
-}
-
-.main-wrapper.dark .note p {
-  color: var(--white);
-  font-size: 0.75rem;
-}
-
-.main-wrapper.dark .note i {
-  color: var(--white);
-  right: 12px;
-  position: absolute;
-}
-
-.main-wrapper.dark .note input {
-  color: var(--white);
-  background-color: var(--main-hover);
-}
-
-.main-wrapper.dark .note textarea {
-  color: var(--white);
-  background-color: var(--main-hover);
 }
