--- a/src/style/hovers.css
+++ b/src/style/hovers.css
@@ -16,6 +16,7 @@ button:hover {
   box-shadow: 0 2px 12px 3px rgba(0, 0, 0, 0.1);
 }
 
+.modal i:hover,
 .note i:hover {
   color: var(--error);
   transform: rotate(-90deg) scale(1.25);
