--- a/src/style/authentication.css
+++ b/src/style/authentication.css
@@ -35,6 +35,7 @@
     width: 100%;
   
     font-size: 0.75rem;
+    text-align: center;
     border-radius: 12px;
     outline: none;
     border: none;
