--- a/src/style/authentication.css
+++ b/src/style/authentication.css
@@ -1,98 +1,114 @@
 .modal {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-  
-    position: fixed;
-    height: 100%;
-    width: 100%;
-    top: 0;
-    backdrop-filter: blur(3px);
-  
-    opacity: 0;
-    z-index: -9999;
-  }
-  
-  .modal.modal-active {
-    opacity: 1;
-    z-index: 9999;
-  }
-  
-  .modal .auth {
-    padding: 24px 24px 12px 24px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    position: relative;
-    background-color: var(--main);
-    border-radius: 12px;
-    box-shadow: 0 2px 12px 3px rgba(0, 0, 0, 0.1);
-  }
-  
-  .modal input {
-    padding: 12px;
-    width: 100%;
-  
-    font-size: 0.75rem;
-    text-align: center;
-    border-radius: 12px;
-    outline: none;
-    border: none;
-    color: var(--black);
-    background-color: var(--white);
-  }
+  display: none;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
 
-  .modal input:first-of-type{
-    margin-top: 12px;
-  }
-  
-  .modal h3 {
-    color: var(--black);
-    margin-top: 12px;
-    font-size: 1rem;
-    font-weight: 500;
-  }
-  
-  .modal span{
-    color: var(--color);
-  }
-  
-  .modal p{
-    color: var(--black);
-    font-size: .5rem;
-  }
+  position: fixed;
+  height: 100%;
+  width: 100%;
+  top: 0;
+  backdrop-filter: blur(3px);
 
-  .modal p.incorrect{
-    color: var(--error);
-  }
+  opacity: 0;
+  z-index: -9999;
+}
 
-.modal p:nth-of-type(2){
+.modal.active {
+  display: flex;
+  opacity: 1;
+  z-index: 9999;
+}
+
+.modal .modal-container {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+}
+
+.modal-container .modal-window {
+  width: 360px;
+  display: none;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+
+  padding: 24px 24px 12px 24px;
+  position: relative;
+  background-color: var(--main);
+  border-radius: 12px;
+  box-shadow: 0 2px 12px 3px rgba(0, 0, 0, 0.1);
+  transition: .25s opacity;
+}
+
+.modal-window.active{
+  display: flex;
+}
+
+.modal-window form{
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  width: 100%;
+}
+
+.modal input {
+  padding: 12px;
+  width: 100%;
+
+  font-size: 0.75rem;
+  text-align: center;
+  border-radius: 12px;
+  outline: none;
+  border: none;
+  color: var(--black);
+  background-color: var(--white);
+}
+
+.modal input:first-of-type {
+  margin-top: 12px;
+}
+
+.modal h3 {
+  color: var(--black);
+  margin-top: 12px;
+  font-size: 1rem;
+  font-weight: 500;
+}
+
+.modal span {
+  color: var(--color);
+}
+
+.modal p {
+  color: var(--black);
+  font-size: 0.5rem;
+}
+
+.modal p.form-splitter{
   margin: 12px 0;
 }
 
-  .modal p:last-of-type{
-      position: absolute;
-      bottom: -60px;
-      display: block;
-      text-align: center;
-      width: 400px;
-        color: var(--black);
-    }
-  
-  .modal a{
-    text-decoration: none;
-    color: var(--color);
-    font-size: .5rem;
-  }
-  
-  .modal button{
-    margin: 24px 0 12px 0;
-  }
-  
-  .modal i{
-    position: absolute;
-    top: -36px;
-    color: var(--black);
-    cursor: pointer;
-  }
+.modal p.modal-footer {
+  text-align: center;
+  margin-top: 24px;
+  max-width: 360px;
+}
+
+.modal a {
+  text-decoration: none;
+  color: var(--color);
+  font-size: 0.5rem;
+}
+
+.modal button {
+  margin: 24px 0 12px 0;
+}
+
+.modal i {
+  position: absolute;
+  top: -36px;
+  color: var(--black);
+  cursor: pointer;
+}
