--- a/src/style/main.css
+++ b/src/style/main.css
@@ -47,6 +47,20 @@ main {
   color: var(--black);
 }
 
+.intro .intro-text p.account-info {
+  font-size: .75rem;
+  margin-bottom: 12px;
+  display: none;
+}
+
+.intro .intro-text p.account-info.active {
+  display: block;
+}
+
+.intro .intro-text .account-info span{
+  font-size: .75rem;
+}
+
 .intro .intro-text p.notification {
   margin: 0 0 12px 12px;
   display: inline-block;
@@ -55,7 +69,7 @@ main {
 }
 
 .intro button {
-  margin: 24px 12px 24px 0;
+  margin: 24px 12px 12px 0;
 }
 /* ---------------------------- Media ---------------------------- */
 @media (max-width: 1100px) {
