--- a/src/style/hovers.css
+++ b/src/style/hovers.css
@@ -1,35 +1,37 @@
-.color-switcher-dropdown button.color:hover {
-  box-shadow: inset 0 0 0 3px var(--grey),
-    inset 0 0 0 6px var(--white);
-}
-
-.theme-switcher-icon:hover,
-.color-switcher-icon:hover {
-  transform: scale(1.08);
-  color: var(--color);
-  box-shadow: 0 2px 12px 3px rgba(0, 0, 0, 0.1);
-}
-
-button:hover {
-  transform: scale(1.08);
-  background-color: var(--color-hover);
-  box-shadow: 0 2px 12px 3px rgba(0, 0, 0, 0.1);
-}
-
-.modal i:hover,
-.note i:hover {
-  color: var(--error);
-  transform: rotate(-90deg) scale(1.25);
-}
-
-.main-wrapper .notes-wrapper .note:hover {
-  background-color: var(--white);
-  z-index: 99;
-}
-
-.main-wrapper .notes-wrapper .note.note:nth-of-type(odd):hover {
-  transform: rotate(0.5deg) scale(1.25) translateY(2px);
-}
-.main-wrapper .notes-wrapper .note:nth-of-type(even):hover {
-  transform: rotate(-0.5deg) scale(1.25) translateY(2px);
+@media (hover: hover) and (pointer: fine) {
+  .color-switcher-dropdown button.color:hover {
+    box-shadow: inset 0 0 0 3px var(--grey),
+      inset 0 0 0 6px var(--white);
+  }
+  
+  .theme-switcher-icon:hover,
+  .color-switcher-icon:hover {
+    transform: scale(1.08);
+    color: var(--color);
+    box-shadow: 0 2px 12px 3px rgba(0, 0, 0, 0.1);
+  }
+  
+  button:hover {
+    transform: scale(1.08);
+    background-color: var(--color-hover);
+    box-shadow: 0 2px 12px 3px rgba(0, 0, 0, 0.1);
+  }
+  
+  .modal i:hover,
+  .note i:hover {
+    color: var(--error);
+    transform: rotate(-90deg) scale(1.25);
+  }
+  
+  .main-wrapper .notes-wrapper .note:hover {
+    background-color: var(--white);
+    z-index: 99;
+  }
+  
+  .main-wrapper .notes-wrapper .note.note:nth-of-type(odd):hover {
+    transform: rotate(0.5deg) scale(1.25) translateY(2px);
+  }
+  .main-wrapper .notes-wrapper .note:nth-of-type(even):hover {
+    transform: rotate(-0.5deg) scale(1.25) translateY(2px);
+  }
 }
